# UofT-courses

./: README.md
CSC148-boardgame/: README.md
CSC148-boardgame/a2/: a2_test_step2.py  a2_test_step4.py  a2_test_step8.py  actions.py  block.py  blocky.py  example_tests.py  goal.py  player.py  pyta_report.html  renderer.py  try.py
CSC165/: README.md
CSC209/: README.md
CSC209/Assignments/a1/: Makefile  classifier.c  knn.c  knn.h  test_distance.c  test_loadimage.c  test_loadingdataset.c
CSC209/Assignments/a2/: Makefile  classifier.c  dectree.c  dectree.h
CSC209/Assignments/a3/: classifier.c
CSC209/Assignments/a4/: Makefile  auction_client.c  auction_server.c  runservers
CSC209/Labs/lab1/: compile_all.sh  my_commands.sh
CSC209/Labs/lab10/: Makefile  bufserver.c  client.1  client.2  randclient.c  readserver.c  server.1  server.2  socket.c  socket.h
CSC209/Labs/lab2/: invest.c  phone.c  phone_loop.c  score_card.c
CSC209/Labs/lab3/: fibonacci.c  split_array.c
CSC209/Labs/lab4/: compare.c  greeting.c  strip.c  truncate.c
CSC209/Labs/lab6/: copy.c  gdb_example.txt  overflow.c
CSC209/Labs/lab7/: childcreates.c  forkloop.c  parentcreates.c
CSC209/Labs/lab8/: checkpasswd.c
CSC209/Labs/lab9/: Makefile  time_reads.c  write_test_file.c
CSC209/PCRS/bitmanipulation/: bitsets.c  bitwise_operators.c  shift.c
CSC209/PCRS/pipe/: low_level.c  redirect.c  show_pipe.c  show_pipe2.c  shpipe.c  student_list.txt
CSC209/PCRS/process/: do_exe.c  fork.c  hello.c  nowait.c  orphan.c  wait.c
CSC209/PCRS/select/: read_from_2.c  select.c
CSC209/PCRS/signal/: dots.c  dots2.c  seg.c
CSC209/PCRS/sockets/: client1.c  client2.c  server1.c  server2.c
CSC209/tests/test1/: README  q1.txt
CSC209/tests/test3/: q1-tf.txt  q2-syscalls.txt  q3-memory.txt  q4-shell.txt  q5-sig.txt  q6-select.txt  q7-sockets.c
CSC236/: README.md
CSC258/: README.md
CSC258/CSC258/: DE1_SOC.xml
CSC258/CSC258/Lab1/: Part1_test.txt  Part2_test.txt  lab1_part1.circ  lab1_part2_1.circ  lab1_part2_simplified.circ
CSC258/CSC258/Lab2/: HEX0_test.txt  HEX1_test.txt  HEX2_test.txt  HEX3_test.txt  HEX4_test.txt  HEX5_test.txt  HEX6_test.txt  HEX_total.txt  Lab2_Part2.circ  Lab2_Part3.circ  lab2_part2-DE1_SOC-MAP.xml  lab2_part3-DE1_SOC-MAP.xml  test_mux4to1.txt
CSC258/CSC258/Lab3/: lab3_part1.circ  lab3_part2.circ  lab3_part3.circ  part1_test.txt  part2_test.txt  part3_0_test.txt  part3_1_2_test.txt  part3_3_test.txt  part3_4_test.txt  part3_5_test.txt  part3_total_test.txt
CSC258/CSC258/Lab4/: binary_multiplication_test.txt  lab4_part1.circ  lab4_part2.circ  lab4_part3.circ  left_shift_test.txt  right_shift_test.txt
CSC258/CSC258/Lab5/: lab5_part1.circ  lab5_part2.circ  lab5_part3.circ
CSC258/CSC258/Lab6/: lab6_answer.circ  lab6_part1_second.circ
CSC258/CSC258/Lab7/: lab7_part1.circ  lab7_part2.circ  lab7_part3.circ
CSC258/CSC258/project/: doodlejump.s  doodlejump2.asm
CSC263/: README.md
CSC263/ps3/263_Q1/: Alice.py  example_maze10.txt  example_maze4.txt  example_maze6.txt  example_maze7.txt  example_maze8.txt  example_maze9.txt  infinite_loop.txt  test-for-blank.txt
CSC309/Exercise/Exercise1/: e1.html  e1_style.css
CSC309/Exercise/Exercise2/: e2_library.html  e2_library.js  e2_style.css
CSC309/Exercise/Exercise4/: package.json  server.js
CSC309/Personal Project/: Alpha release.docx  CSC309 Individual Project Proposal.docx  final_submission.docx
CSC311/hw1/: CSC311_A1_1a.ipynb  hw1_code.py
CSC311/hw2/: run_knn.py  run_logistic_regression.py  utils.py
CSC311/hw2/311hw2/: q4.py
CSC311/hw3/: naive_bayes.py  q4.py
CSC311/project/: knn.py
CSC324/A1/: A1.eva-test.bak  A1.eva-test.rkt  A1.eva.rkt  A1.eve-test.bak  A1.eve-test.rkt  A1.eve.bak  A1.eve.rkt  A1.evo-test.rkt  A1.evo.bak  A1.evo.rkt  README.md
CSC324/A1/324A1-Amy/: A1.eva.rkt  A1.eve.bak  A1.eve.rkt  A1.evo.bak  A1.evo.rkt
CSC324/A2/: assignment2-amy.hi  assignment2-amy.hs  assignment2.hi  assignment2.hs
CSC324/Exercise1/: ex1-2.rkt  exercise-1.bak  exercise-1.rkt
CSC324/Exercise2/: exercise-2.bak  exercise-2.rkt
CSC324/Exercise3/: exercise-3.bak  exercise-3.rkt
CSC324/Exercise4/: Either.hs  Maybe.hs  divAllBy.hs  exercise-4.hi  exercise-4.hs  shape.hs  shape2.hs  toJSON.hs
CSC324/Exercise5/: exercise-5.hi  exercise-5.hs
CSC324/Lab1/: lab-1.bak  lab-1.rkt  tail-recursion.rkt
CSC343/: README.md
CSC343/CSC343/A2/: Checkout.csv  EventSchedule.csv  HoldingISBN.csv  HoldingSeries.csv  LibraryCatalogue.csv  LibraryEvent.csv  Return.csv  RoomBooking.csv  a2_schema.sql  import_data.sql
CSC369/a1/: CMakeLists.txt  README.md
CSC369/a1/examples/: CMakeLists.txt  handout_example.c
CSC369/a1/src/: CMakeLists.txt  csc369_thread.c  csc369_thread.h
CSC369/a1/tests/: CMakeLists.txt  check_thread.c
CSC369/a2/: CMakeLists.txt  README.md
CSC369/a2/examples/: CMakeLists.txt  hot_potato.c  spin_and_join.c
CSC369/a2/src/: CMakeLists.txt  csc369_interrupts.c  csc369_interrupts.h  csc369_thread.c  csc369_thread.h
CSC369/a2/tests/: CMakeLists.txt  check_a2_thread.c  check_a2_thread_a1.c
CSC369/a3/: CMakeLists.txt  README.md
CSC369/a3/benchmarks/: CMakeLists.txt  Makefile  blocked.c  marker.h  matmul.c  repeatloop.c  simpleloop.c  timer.h
CSC369/a3/scripts/: README.md  fastslim-with-offset.py  run.sh  simify-trace.py  trimtrace.py
CSC369/a3/src/: CMakeLists.txt  Makefile  clock.c  list.h  lru.c  pagetable.c  pagetable.h  pagetable_generic.h  rand.c  rr.c  sim.c  sim.h  swap.c  swap.h  timer.h
CSC369/a4/: CMakeLists.txt  README.md
CSC369/a4/scripts/: run_mkfs.sh  run_vsfs.sh  util.sh
CSC369/a4/src/: CMakeLists.txt  bitmap.c  bitmap.h  fs_ctx.c  fs_ctx.h  map.c  map.h  mkfs.c  options.c  options.h  util.h  vsfs.c  vsfs.h
CSC369/a4/tests/: conftest.py  expected_values.py  test_create.py  test_getattr.py  test_readdir.py  test_statvfs.py
CSC369/markus-hooks/: pre-commit
CSC373-work/: README.md
CSC413/A1/: a1_code.ipynb
CSC413/A2/: a2-code.ipynb
CSC413/A4/: dqn.ipynb  gnn.ipynb
CSC420/: README.md
CSC420/CSC420/A1/: README.txt  (+1 more)
CSC458/: 03-switched_ethernet-IP.pptx  04-routing.pptx
(+55 files in other folders)
